# nvidia_fan_linux

./: CMakeLists.txt  build.sh  readme.md
src/: main.cpp
